--- a/src/templates/paragraphs/related-stories.twig
+++ b/src/templates/paragraphs/related-stories.twig
@@ -16,6 +16,8 @@
             {% endif %}
 
               {% include 'partials/card.twig' with {
+                id: i,
+                type: 'basic-content',
                 tags: tags,
                 image_sizes: image_sizes,
                 title: 'Sustainable Agriculture in the Sacred Valley',
