--- a/src/templates/partials/card.twig
+++ b/src/templates/partials/card.twig
@@ -1,4 +1,4 @@
-<article class="card{% if image %} card--has-image{% endif %}">
+<article class="card{% if image %} card--has-image{% endif %}" aria-labelledby="midd-{{ type }}-{{ id }}-header">
   {% if image %}
     <div class="card__media">
       <a href={{href}}>
