--- a/src/templates/partials/story-aside.twig
+++ b/src/templates/partials/story-aside.twig
@@ -1,5 +1,5 @@
-<article class="story-aside">
-  <h3 class="story-aside__title">
+<article class="story-aside" aria-labelledby="midd-story-aside-header">
+  <h3 class="story-aside__title" id="midd-story-aside-header">
     <a href="" class="story-aside__link">Alumna Receives Global Award for Contribution to Field of Legal English</a>
   </h3>
   <p class="story-aside__author">by <a href="#" class="story-aside__author-link">Author Name</a></p>
