--- a/src/templates/partials/story-teaser-lite.twig
+++ b/src/templates/partials/story-teaser-lite.twig
@@ -1,4 +1,4 @@
-<article class="story-teaser-lite">
-  <h3 class="story-teaser-lite__title"><a href="{{link}}">{{title}}</a></h3>
+<article class="story-teaser-lite" aria-labelledby="midd-story-{{ id }}-header">
+  <h3 class="story-teaser-lite__title" id="midd-story-{{ id }}-header"><a href="{{link}}">{{title}}</a></h3>
   <p class="story-teaser-lite__text">{{text}}</p>
 </article>
