--- a/src/templates/partials/teaser.twig
+++ b/src/templates/partials/teaser.twig
@@ -1,11 +1,11 @@
-<article class="teaser">
+<article class="teaser" aria-labelledby="midd-basic-content-{{ id }}-header">
   <figure class="teaser__media">
     <a href="#">
       {% include 'partials/img.twig' with { name: 'teaser' } %}
     </a>
   </figure>
   <div class="teaser__body">
-    <h3 class="teaser__title">
+    <h3 class="teaser__title" id="midd-basic-content-{{ id }}-header">
       <a href="#">Lorem ipsum dolor set</a>
     </h3>
     <p class="teaser__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, possimus dolorem nesciunt temporibus corporis expedita quibusdam soluta officiis dicta dolor vitae eos sit repellat necessitatibus, exercitationem magnam quo corrupti fugiat!</p>
