--- a/src/templates/t23-newsroom.twig
+++ b/src/templates/t23-newsroom.twig
@@ -26,12 +26,13 @@
 {% block layout_content %}
 
   {% include 'partials/story-teaser.twig' with {
+    id: 'featured',
     featured: true
   } %}
   <ol class="list list--dividers list--lg mb-5">
     {% for i in 1..5 %}
       <li class="list__item">
-        {% include 'partials/story-teaser.twig' %}
+        {% include 'partials/story-teaser.twig' with { id: i } %}
       </li>
     {% endfor %}
   </ol>
