--- a/src/templates/paragraphs/related-stories-list.twig
+++ b/src/templates/paragraphs/related-stories-list.twig
@@ -8,7 +8,7 @@
     <ul class="list list--dividers list--md">
       {% for i in 0..3 %}
         <li class="list__item">
-          {% include 'partials/story-teaser.twig' %}
+          {% include 'partials/story-teaser.twig' with { id: i } %}
         </li>
       {% endfor %}
     </ul>
