--- a/src/templates/partials/story-teaser.twig
+++ b/src/templates/partials/story-teaser.twig
@@ -1,4 +1,4 @@
-<article class="story-teaser{% if featured %} story-teaser--featured{% endif %}">
+<article class="story-teaser{% if featured %} story-teaser--featured{% endif %}" aria-labelledby="midd-story-{{ id }}-header">
   <div class="story-teaser__media">
     <a href="{{url}}">
       <figure class="media media-image view-mode-teaser">
@@ -11,7 +11,7 @@
     </a>
   </div>
   <div class="story-teaser__body">
-    <h3 class="story-teaser__title"><a href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing</a></h3>
+    <h3 class="story-teaser__title" id=="midd-story-{{ id }}-header"><a href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing</a></h3>
     <p class="story-teaser__author">by <a href="#" class="link-border">Author Name</a></p>
     <time datetime="" class="story-teaser__pubdate">Jun 8, 2017</time>
     <p class="story-teaser__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae sequi sunt distinctio nostrum voluptate eveniet, repellat commodi ex suscipit rem iste provident, autem fugit doloremque delectus sed, repellendus consequatur recusandae.</p>
