--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import '../../node_modules/bootstrap/scss/utilities/screenreaders';
 
 @import '../../node_modules/swiper/dist/css/swiper';
+@import '../../node_modules/flatpickr/dist/flatpickr';
 
 // base
 @import 'base/global';
