Add the datepicker to the events list template. For #133.

--- a/src/templates/t07-events.twig
+++ b/src/templates/t07-events.twig
@@ -24,6 +24,8 @@
   {% endembed %}
 
   <div class="d-none d-md-block">
+    <div id="midd-event-date-widget"></div>
+
     {% include 'partials/sidebar-search.twig' %}
 
     <a href="#" class="button button--tertiary button--block text-left clearfix mb-1">
