--- a/src/scss/components/_grid-nav.scss
+++ b/src/scss/components/_grid-nav.scss
@@ -1,5 +1,8 @@
 .grid-nav {
   margin-bottom: $component-margin-bottom;
+  @include media(md) {
+    margin-bottom: 0; 
+  }
 }
 
 .grid-nav__list {
