tweak form label styles

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -18,8 +18,9 @@
 
 .form__label {
   display: block;
-  font-family: $font-family-serif;
-  margin-bottom: 5px;
+  font-size: 16px;
+  font-weight: $font-weight-semibold;
+  margin-bottom: 0.5rem;
 }
 
 .form__control {
