use form__group on datepicker and event search

--- a/src/templates/partials/sidebar-search.twig
+++ b/src/templates/partials/sidebar-search.twig
@@ -1,16 +1,18 @@
-<form action="" class="form mb-3">
-  <div class="input-group">
-    <div class="input-group__field">
-      <label for="midd-sidebar-search" class="sr-only">Search Events</label>
-      <input type="search" placeholder="Search events" id="midd-sidebar-search" class="form__control" required>
-    </div>
-    <div class="input-group__button">
-      <button type="submit" class="button">
-        <span class="sr-only">Search</span>
-        <svg class="icon" aria-hidden="true">
-          <use xlink:href="#icon-search" />
-        </svg>
-      </button>
+<form action="" class="form">
+  <div class="form__group">
+    <div class="input-group">
+      <div class="input-group__field">
+        <label for="midd-sidebar-search" class="sr-only">Search Events</label>
+        <input type="search" placeholder="Search events" id="midd-sidebar-search" class="form__control" required>
+      </div>
+      <div class="input-group__button">
+        <button type="submit" class="button">
+          <span class="sr-only">Search</span>
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-search" />
+          </svg>
+        </button>
+      </div>
     </div>
   </div>
 </form>
