add font size util for small fonts

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -104,6 +104,7 @@
 @import 'utils/borders';
 @import 'utils/display';
 @import 'utils/float';
+@import 'utils/font';
 @import 'utils/spacing';
 @import 'utils/text';
 @import 'utils/toggler';
