add show all events link to clear date filter

--- a/src/templates/t07-events.twig
+++ b/src/templates/t07-events.twig
@@ -27,6 +27,9 @@
     <div class="form__group">
       <label for="midd-events-datepicker" class="form__label">Filter by date</label>
       <input type="text" class="form__control js-events-datepicker d-none" id="midd-events-datepicker" />
+      <div class="pt-2">
+        <a href="#" class="link-border font-sm">Show All Events</a>
+      </div>
     </div>
 
     {% include 'partials/sidebar-search.twig' %}
