add bottom margin to event list so pages without pagination still have bottom space

--- a/src/templates/t07-events.twig
+++ b/src/templates/t07-events.twig
@@ -57,7 +57,7 @@
     </span>
   </div>
 
-  <ol class="list list--dividers list--md">
+  <ol class="list list--dividers list--md mb-5">
     {% for i in 0..7 %}
       <li class="list__item">
         {% include 'partials/event-teaser.twig' with {
