use lead class on taxonomy term count

--- a/src/templates/t14-taxonomy-term.twig
+++ b/src/templates/t14-taxonomy-term.twig
@@ -6,7 +6,7 @@
 
 {% block layout_content %}
 
-  <p class="mb-6">36 Items</p>
+  <p class="lead">36 Items</p>
 
   <ol class="list list--dividers list--lg mb-6">
     {% for i in 0..1 %}
