check if filter is active to denote conditionally rendered markup

--- a/src/templates/t07-events.twig
+++ b/src/templates/t07-events.twig
@@ -1,5 +1,6 @@
 {% extends "layout-sidebar.twig" %}
 
+
 {% set page_header = {
   title: 'Events',
   callout_link_text: 'Sign up for events email',
@@ -30,6 +31,8 @@
       <div class="pt-2">
         <a href="#" class="link-border font-sm">Show All Events</a>
       </div>
+        <div class="pt-2">
+          <a href="#" class="link-border font-sm">Show All Events</a>
     </div>
 
     {% include 'partials/sidebar-search.twig' %}
