reduce z index on datepicker since it is open by default
fixes issue where it gets displayed above site nav

--- a/src/scss/components/_datepicker.scss
+++ b/src/scss/components/_datepicker.scss
@@ -21,6 +21,10 @@ $pd-font-family: $font-family-sans-serif;
 
 @import '../../../node_modules/pikaday/scss/pikaday';
 
+.pika-single {
+  z-index: 2;
+}
+
 .pika-lendar {
   float: none;
   width: inherit;
