change footer logo to use svg. closes #124

--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -45,8 +45,7 @@
         <div class="col-lg-3">
 
           <div class="secondary-footer__brand">
-            <!-- TODO: use picture? -->
-            <img src="images/midd-logo.png" alt="Middlebury">
+            <img src="images/middlebury-logo-white.svg" alt="Middlebury" width="195" height="71">
           </div>
 
         </div>
