--- a/src/templates/partials/icons.twig
+++ b/src/templates/partials/icons.twig
@@ -24,6 +24,10 @@
 			<title>icon-filter-select</title><path d="M7.1 14L0 6.9l2.1-2 5 5L16.9 0 19 2.1z" fill-rule="evenodd"></path>
 		</symbol>
 	
+		<symbol id="icon-close" viewBox="0 0 16 16">
+			<title>icon-close</title><path d="M8 6.586l-4.95-4.95L1.636 3.05 6.586 8l-4.95 4.95 1.414 1.414L8 9.414l4.95 4.95 1.414-1.414L9.414 8l4.95-4.95-1.414-1.414L8 6.586z"></path>
+		</symbol>
+	
 		<symbol id="icon-compass" viewBox="0 0 18 22">
 			<title>icon-compass</title><path d="M9.4 3.3v-.4c.6-.2 1.1-.7 1.1-1.4C10.5.7 9.9.1 9.1.1c-.8 0-1.4.6-1.4 1.4 0 .7.5 1.2 1.1 1.4v.4c-5 .2-8.8 4.2-8.8 9 0 5 4 9 9 9s9-4 9-9c0-4.8-3.9-8.8-8.6-9zM8.3 1.5c0-.4.3-.7.7-.7.4 0 .7.3.7.7 0 .4-.3.7-.7.7-.4 0-.7-.3-.7-.7zM4.6 17.2h-.2c-.1 0-.2 0-.3-.1-.1-.1-.1-.2 0-.4L7 10.9l3.4 3.4-5.8 2.9zm9.3-9.3L11 13.8l-3.4-3.4 5.9-2.9c.1-.1.3 0 .4.1 0 0 .1.1 0 .3z" fill-rule="evenodd"></path>
 		</symbol>
@@ -86,10 +90,6 @@
 	
 		<symbol id="icon-widget-updown" viewBox="0 0 14 24">
 			<title>icon-widget-updown</title><path d="M7 24L.2 17.2c-.3-.3-.3-.7 0-1 .3-.3.7-.3 1 0L7 21.9l5.8-5.7c.3-.3.7-.3 1 0 .3.3.3.7 0 1L7 24zM7 0l6.8 6.8c.3.3.3.7 0 1-.3.3-.7.3-1 0L7 2.1 1.2 7.8c-.3.3-.7.3-1 0-.3-.3-.3-.7 0-1L7 0z" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-x" viewBox="0 0 16 16">
-			<title>icon-x</title><path d="M8 6.586l-4.95-4.95L1.636 3.05 6.586 8l-4.95 4.95 1.414 1.414L8 9.414l4.95 4.95 1.414-1.414L9.414 8l4.95-4.95-1.414-1.414L8 6.586z"></path>
 		</symbol>
 	
 		<symbol id="icon-youtube" viewBox="0 0 29 20">
