--- a/src/templates/partials/program-spotlight-item.twig
+++ b/src/templates/partials/program-spotlight-item.twig
@@ -41,7 +41,7 @@
         data-toggle-group="midd-program-spotlight-items"
         data-toggle-linked="spotlight-item-{{id}}">
         <svg class="icon" aria-hidden="true">
-          <use xlink:href="#icon-x" />
+          <use xlink:href="#icon-close" />
         </svg>
       </button>
 
