move lead to own file

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -53,6 +53,7 @@
 @import 'components/icon';
 @import 'components/image';
 @import 'components/input-group';
+@import 'components/lead';
 @import 'components/list';
 @import 'components/media-object';
 @import 'components/media';
