accessibility: The hash character should not be part of the aria-labelledby attribute. For #80.

--- a/src/templates/partials/accordion.twig
+++ b/src/templates/partials/accordion.twig
@@ -26,7 +26,7 @@
         </a>
 
       </h4>
-      <div class="accordion-item__content js-accordion-content-{{id}}" id="accordion-content-{{id}}" role="tabpanel" aria-labelledby="#accordion-item-label-{{id}}">
+      <div class="accordion-item__content js-accordion-content-{{id}}" id="accordion-content-{{id}}" role="tabpanel" aria-labelledby="accordion-item-label-{{id}}">
         <div class="typography">
           {{item.content}}
         </div>
