wrap callout info text in typography so links get underlines
Fixes #137

--- a/src/templates/t10-story.twig
+++ b/src/templates/t10-story.twig
@@ -66,7 +66,7 @@
         <div class="story-detail__media-contact">
           <div class="callout-info">
             <h3 class="callout-info__title">For More Information</h3>
-            <p class="callout-info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio. Veritatis, esse. At ad a architecto eum voluptates in inventore placeat culpa nemo! Minus voluptates cupiditate quasi, laudantium in quam?</p>
+            <p class="callout-info__text typography">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio. Veritatis, esse. At ad a architecto eum voluptates in inventore placeat culpa nemo! Minus voluptates cupiditate quasi, laudantium in quam?</p>
           </div>
         </div>
 
