--- a/src/scss/components/_event-card.scss
+++ b/src/scss/components/_event-card.scss
@@ -9,6 +9,7 @@
   font-size: $h4-font-size;
   line-height: $h4-line-height;
   margin-bottom: 0.5rem;
+  word-wrap: break-word;
 }
 
 .event-card__datetime {
