add break-words mixin to break words and add hyphens
for #138

--- a/src/scss/components/_event-card.scss
+++ b/src/scss/components/_event-card.scss
@@ -9,7 +9,7 @@
   font-size: $h4-font-size;
   line-height: $h4-line-height;
   margin-bottom: 0.5rem;
-  word-wrap: break-word;
+  @include break-words;
 }
 
 .event-card__datetime {
