--- a/src/templates/paragraphs/related-stories.twig
+++ b/src/templates/paragraphs/related-stories.twig
@@ -20,7 +20,7 @@
                 type: 'basic-content',
                 tags: tags,
                 image_sizes: image_sizes,
-                title: 'Sustainable Agriculture in the Sacred Valley',
+                title: 'Somereallylongwordtotestbreaking Sustainable Agriculture in the Sacred Valley',
                 text: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam asperiores consectetur, voluptate, officiis nisi magni quasi reprehenderit.'
               } %}
 
