--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -38,6 +38,7 @@
   font-size: $h3-font-size;
   line-height: $h3-line-height;
   margin-bottom: 0.5rem;
+  @include break-words;
 }
 
 .card__author {
