accessibility: Add aria-labelledby attribute to the section element in the Quick Links paragraph. For #80.

--- a/src/templates/partials/callout-links.twig
+++ b/src/templates/partials/callout-links.twig
@@ -1,5 +1,5 @@
-<section class="callout-links">
-  <h2 class="callout-links__title">{{title}}</h2>
+<section class="callout-links" aria-labelledby="midd-quick-links-{{id}}">
+  <h2 class="callout-links__title" id="midd-quick-links-{{id}}">{{title}}</h2>
 
   <ul class="callout-links__list">
     {% for item in items %}
