accessibility: Use the nav element for the Quick Links paragraph so they have a more descriptive aria role. For #80.

--- a/src/templates/partials/callout-links.twig
+++ b/src/templates/partials/callout-links.twig
@@ -1,4 +1,4 @@
-<section class="callout-links" aria-labelledby="midd-quick-links-{{id}}">
+<nav class="callout-links" aria-labelledby="midd-quick-links-{{id}}">
   <h2 class="callout-links__title" id="midd-quick-links-{{id}}">{{title}}</h2>
 
   <ul class="callout-links__list">
@@ -8,4 +8,4 @@
       </li>
     {% endfor %}
   </ul>
-</section>
+</nav>
