--- a/src/templates/partials/callout-contacts.twig
+++ b/src/templates/partials/callout-contacts.twig
@@ -1,5 +1,5 @@
-<section class="callout-contacts">
-  <h2 class="callout-contacts__title">Emergency Contacts</h2>
+<section class="callout-contacts" aria-labelledby="midd-emergency-contacts-title">
+  <h2 class="callout-contacts__title" id="midd-emergency-contacts-title">Emergency Contacts</h2>
   <p class="callout-contacts__item">Call <a href="tel:911" class="link-border">911</a> for all life threatening emergencies</p>
   <p class="callout-contacts__item">Call 9-911 from a campus phone</p>
   <p class="callout-contacts__item">Call Security at <a href="tel:8316474153" class="link-border">831-647-4153</a> or pick up a blue campus phone</p>
