accessibility: Add aria-labelledby attributes to the Related Events paragraphs. For #80.

--- a/src/templates/paragraphs/related-events-list.twig
+++ b/src/templates/paragraphs/related-events-list.twig
@@ -1,7 +1,8 @@
 {% embed 'partials/section.twig' with {
   title: 'Related Events',
   moreLinkText: 'View all',
-  moreLinkHref: '#'
+  moreLinkHref: '#',
+  labelledby: 'midd-related-events'
 } %}
   {% block content %}
     <ul class="list list--dividers list--md">
