--- a/src/templates/paragraphs/related-events.twig
+++ b/src/templates/paragraphs/related-events.twig
@@ -1,7 +1,8 @@
 {% embed 'partials/section.twig' with {
   title: 'Related Events',
   moreLinkText: 'View all',
-  moreLinkHref: '#'
+  moreLinkHref: '#',
+  labelledby: 'midd-related-events'
 } %}
   {% block content %}
     <div class="row">
