accessibility: Make the aria-labelledby attribute value for Related Stories lists closer to the value used by Drupal. For #80.

--- a/src/templates/paragraphs/related-stories-list.twig
+++ b/src/templates/paragraphs/related-stories-list.twig
@@ -1,6 +1,6 @@
 {% embed 'partials/section.twig' with {
   title: 'Related Stories',
-  labelledby: 'midd-related-stories-label',
+  labelledby: 'midd-related-stories',
   moreLinkText: 'View all',
   moreLinkHref: '#'
 } %}
