accessibility: Add the complementary role to the Related Stories paragraphs. For #80.

--- a/src/templates/paragraphs/related-stories-list.twig
+++ b/src/templates/paragraphs/related-stories-list.twig
@@ -1,6 +1,7 @@
 {% embed 'partials/section.twig' with {
   title: 'Related Stories',
   labelledby: 'midd-related-stories',
+  role: 'complementary',
   moreLinkText: 'View all',
   moreLinkHref: '#'
 } %}
