--- a/src/scss/components/_homepage-hero.scss
+++ b/src/scss/components/_homepage-hero.scss
@@ -2,6 +2,7 @@
   position: relative;
   height: 442px;
   overflow: hidden;
+  margin-bottom: $component-margin-bottom;
 
   @include media(sm) {
     height: auto;
