--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -159,6 +159,12 @@
 
   {# G3 image paragraph #}
 
+  {% include 'paragraphs/text.twig' %}
+
+  {% include 'paragraphs/image.twig' with { right: true } %}
+
+  {% include 'paragraphs/text.twig' %}
+
   {% include 'paragraphs/image.twig' %}
 
   {% include 'paragraphs/two-col-text.twig' %}
