add profile teaser text
for https://github.com/middlebury/drupal8/issues/348

--- a/src/templates/partials/profile-teaser.twig
+++ b/src/templates/partials/profile-teaser.twig
@@ -9,6 +9,7 @@
   <div class="profile-teaser__content">
     <h3 class="profile-teaser__name"><a href="#">Beryl Levinger</a></h3>
     <p class="profile-teaser__title">Program Chair, Master of Public Administration and International Policy and Development</p>
+    <p class="profile-teaser__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quis, repellat iusto cum non molestiae voluptatem adipisci accusamus rerum vero harum consectetur esse obcaecati nesciunt excepturi nihil magnam, assumenda sit?</p>
     <p class="profile-teaser__info">
       <strong>Email:</strong> <a href="mailto:blevinger@middlebury.edu" class="link-border">blevinger@middlebury.edu</a><br>
       <strong>Tel:</strong> 617-324-7535<br>
