--- a/src/scss/components/_profile-teaser.scss
+++ b/src/scss/components/_profile-teaser.scss
@@ -21,11 +21,20 @@
 .profile-teaser__title {
   font-size: 16px;
   line-height: 24px;
-  margin-bottom: 1.5rem;
-  // margin-bottom: 10px;
+  margin-bottom: 1rem;
+}
+
+.profile-teaser__social {
+  margin-bottom: 1rem;
 }
 
 .profile-teaser__info {
   font-size: 14px;
+  margin-bottom: 1rem;
+}
+
+.profile-teaser__text {
+  font-size: 14px;
+  line-height: 20px;
   margin-bottom: 1rem;
 }
