--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -83,6 +83,12 @@ ul {
   padding: 0;
 }
 
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
 h1,
 h2,
 h3,
@@ -95,31 +101,37 @@ h6 {
   margin-bottom: $headings-margin-bottom;
 }
 
+.h1,
 h1 {
   font-size: $h1-font-size;
   line-height: $h1-line-height;
 }
 
+.h2,
 h2 {
   font-size: $h2-font-size;
   line-height: $h2-line-height;
 }
 
+.h3,
 h3 {
   font-size: $h3-font-size;
   line-height: $h3-line-height;
 }
 
+.h4,
 h4 {
   font-size: $h4-font-size;
   line-height: $h4-line-height;
 }
 
+.h5,
 h5 {
   font-size: $h5-font-size;
   line-height: $h5-line-height;
 }
 
+.h6,
 h6 {
   font-size: $h6-font-size;
   line-height: $h6-line-height;
