add font scale utils

--- a/src/templates/t07-events.twig
+++ b/src/templates/t07-events.twig
@@ -33,7 +33,7 @@
       <input type="text" class="form__control js-events-datepicker d-none" id="midd-events-datepicker" />
       {% if filter_active %}
         <div class="pt-2">
-          <a href="#" class="link-border font-sm">Show All Events</a>
+          <a href="#" class="link-border f2">Show All Events</a>
         </div>
       {% endif %}
     </div>
@@ -59,7 +59,7 @@
       <span>Showing Events for March 2, 2018</span>
       {# if float right is on link, for some reason more space gets added between the link text and border #}
       <span class="float-right">
-        <a href="#" class="link-border font-sm">Show All Events</a>
+        <a href="#" class="link-border f2">Show All Events</a>
       </span>
     </div>
   {% endif %}
