--- a/src/scss/utils/_font.scss
+++ b/src/scss/utils/_font.scss
@@ -1,3 +1,15 @@
-.font-sm {
+.f1 {
+  font-size: 12px;
+}
+
+.f2 {
   font-size: 14px;
+}
+
+.f3 {
+  font-size: 16px;
+}
+
+.f4 {
+  font-size: 18px;
 }
