--- a/src/templates/t19-curriculum.twig
+++ b/src/templates/t19-curriculum.twig
@@ -82,7 +82,7 @@
             </ul>
           </td>
           <td>
-            <strong class="sans-serif">Jeff Dayton-Johnson</strong>
+            <strong>Jeff Dayton-Johnson</strong>
           </td>
         </tr>
         {% endfor %}
