--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -49,7 +49,7 @@
               <ol class="list list--dividers list--md">
                 {% for item in homepage.upcoming_events %}
                   <li class="list__item">
-                    {% include 'partials/event-teaser-lite.twig' with {
+                    {% include 'partials/event-teaser.twig' with {
                       date: 'Jul 12, 2016',
                       time: '1:00 PM',
                       title: 'Museum of Art Lecture Series',
