--- a/src/templates/t05-faculty-profile.twig
+++ b/src/templates/t05-faculty-profile.twig
@@ -106,12 +106,7 @@
 
                 <ol class="list list--dividers list--md">
                   <li class="list__item">
-                    {% include 'partials/event-teaser-lite.twig' with {
-                      title: 'Museum of Art Lecture Series',
-                      date: 'Jun 12',
-                      time: '4:00 PM',
-                      location: 'McCone Irvine Auditoriumh'
-                    } %}
+                    {% include 'partials/event-teaser.twig' %}
                   </li>
                 </ol>
               </section>
