--- a/src/templates/partials/event-teaser.twig
+++ b/src/templates/partials/event-teaser.twig
@@ -1,18 +1,18 @@
 <article class="event-teaser" aria-labelledby="midd-event-{{i}}-header">
-  <div class="event-teaser__media">
-    <a href="{{url}}">
-      <figure class="media media-image view-mode-teaser">
-        {% include 'partials/img.twig' with { name: 'teaser' } %}
-      </figure>
-    </a>
-  </div>
+  <time datetime="" class="event-teaser__date">
+    <span class="event-teaser__month">Jun</span>
+    <span class="event-teaser__day">24</span>
+  </time>
   <div class="event-teaser__body">
-    <p class="event-teaser__datetime"><strong><time datetime="">September 25, 2016</time></strong> &middot; <strong><time datetime="">5:00 PM</time></strong></p>
-    <p class="event-teaser__local"><span>McCone Irvine Auditorium</span></p>
-    <h3 class="event-teaser__title" id="midd-event-{{i}}-header"><a href="{{url}}">Lorem ipsum dolor set</a></h3>
-    <p class="event-teaser__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente totam sequi est. Expedita adipisci fugiat eum nisi. Provident cupiditate fuga enim aliquid repellat rem a, earum accusamus delectus quod deleniti!</p>
-    <ul class="event-teaser__metalist">
-      <li class="event-teaser__metaitem">Open to the Public</li>
-    </ul>
+    <h3 class="event-teaser__title" id="midd-event-{{i}}-header">
+      <a href="{{url|default('#')}}" title="{{title}} on June 24, 2017 &middot; 11:45 AM">
+        Museum of Art Lecture Series
+      </a>
+    </h3>
+    <p class="event-teaser__local">McCone Irvine Auditorium</p>
+    <time datetime="" class="event-teaser__time">11:45 AM</time>
+    {% if random(1) %}
+      <small class="f2 color-gray">Open to the Public</small>
+    {% endif %}
   </div>
 </article>
